 -- Se reactivaron las factories para poder testear los mails de forma correcta
 -- Se creó el command newsletter:send para enviar los mails a los usuarios
 -- Se creó el schedule en el Kernel.php para correr el evento una vez a la semana

-------------------------

09/06/2020 (Emi)

Sistema de Desuscripción de Newsletters
 -- Creación de Columnas subscription_token y subscribed en la tabla de Usuarios
 -- Se crearon tokens de 40 caracteres para los usuarios y factories
 -- Actualización de command de envío de newsletters para implementar nueva lógica condicional más eficiente con parámetro subscribed
 -- Se creó una vista de desuscripción con dos resultados: failure y success
 -- Se añadió el token de desuscripción al footer de los newsletters
 -- Por default los usuarios registrados se suscriben al newsletter de forma automática
 -- Método de unsubscribe en usuarioController

 -- Falta implementar en el próximo push la posibilidad de gestionar el estado de tu suscripción desde la vista de Modificar Perfil

 -------------------------

10/06/2020 (Emi)

Sistema de verificación de cuentas tras registro
 -- A partir de ahora es necesario verificar el mail tras registrarse
 -- El login vía AJAX va a tirar la alerta específica de que la cuenta no está verificada

 Próximo push
 -- Se va a implementar una vista indicando que la cuenta no está verificada
 -- Se personalizará el mail de activación de cuenta (MJML)

  -------------------------

11/06/2020 (Emi)

Sistema verificación de cuentas tras registro
-- Diseño y maquetado de nueva vista para verificación de mail
-- Mail de verificación de cuenta personalizado

 Próximo Push
 -- Hacer que el sistema de verificación de mail no sea el default de laravel ya que genera conflictos 


---------------------------------

15/6/2020 (Fran)

Sistema de modal registro
 -- Se implemento libreria "js-cookie" para trabajar con cookies
 -- Se modifico handle_functions.js con ES6 