@@ -1,6 +1,6 @@
-@extends('layouts.app')
+@extends('layouts.plantilla-header')
 
-@section('content')
+@section('main')
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
